Obj-C exception crash in AVStreamSession when using EME in Private Browsing mode https://bugs.webkit.org/show_bug.cgi?id=175547

Reviewed by Eric Carlson.

When the storagePath() is empty, do not use those AVStreamSession APIs which require a valid file path to stored
proof-of-key-release data.

Drive-by fix: return emptyString() from HTMLMediaElement::mediaPlayerMediaKeysStorageDirectory() when in Private
Browsing mode, to match the behavior of WebKitMediaKeySession.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaPlayerMediaKeysStorageDirectory const):
* platform/graphics/avfoundation/objc/CDMSessionAVStreamSession.mm:
(WebCore::CDMSessionAVStreamSession::releaseKeys):
(WebCore::CDMSessionAVStreamSession::update):
(WebCore::CDMSessionAVStreamSession::generateKeyReleaseMessage):


Canonical link: https://commits.webkit.org/192245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220723 268f45cc-cd09-0410-ab3c-d52691b4dbfc